# enterprise-decision-intelligence

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
apps/ingestion/: README.md  alembic.ini  pyproject.toml
apps/ingestion/migrations/: env.py
apps/ingestion/migrations/versions/: 0001_ingestion.py
apps/ingestion/src/ingestion/: __init__.py  app.py  cli.py  config.py  sim_control.py
apps/ingestion/tests/: conftest.py
apps/ingestion/tests/integration/: test_outbox_reconcile.py  test_redpanda_roundtrip.py
apps/ingestion/tests/unit/: test_api_routes.py  test_coerce_validate.py  test_envelope.py  test_idempotency.py  test_pipeline_inproc.py  test_simulator.py
libs/edis-contracts/: pyproject.toml
libs/edis-contracts/edis_contracts/: __init__.py  canonical.py  decisions.py  events.py  findings.py  governance.py  ingest.py  security.py  topics.py
libs/edis-contracts/tests/: test_schema_stability.py
libs/edis-contracts/tests/golden/: AuditEvent.json  CandidateCause.json  CanonicalCustomer.json  CanonicalEvent.json  CanonicalOrder.json  CanonicalOrderLine.json  CanonicalProduct.json  ConfidenceScore.json  CustomerActivity.json  CustomerPayloadV1.json  DLQRecord.json  Decision.json  Evidence.json  EvidenceBundle.json  EvidenceItem.json  Finding.json  Forecast.json  ImpactEstimate.json  IngestEnvelope.json  LineageEvent.json  MetricObservation.json  MetricPoint.json  OpsEvent.json  OpsPayloadV1.json  OutcomeReport.json  QuarantinedRecord.json  Recommendation.json  RecommendationLifecycleEvent.json  SalesPayloadV1.json  SourceRef.json
libs/edis-governance-sdk/: pyproject.toml
libs/edis-governance-sdk/edis_gov_sdk/: __init__.py  audit.py  explain.py  lineage.py
libs/edis-governance-sdk/tests/: test_emitters.py
libs/edis-platform/: pyproject.toml
libs/edis-platform/edis_platform/: __init__.py  errors.py  logging.py  otel.py  settings.py
libs/edis-platform/edis_platform/authz/: __init__.py  deps.py  jwt.py  rbac.py
libs/edis-platform/edis_platform/bus/: __init__.py  base.py  inproc.py  kafka.py  redis_streams.py
libs/edis-platform/edis_platform/db/: __init__.py  session.py
libs/edis-platform/tests/: test_inproc_bus.py
services/copilot/: pyproject.toml
services/copilot/edis_copilot/: __init__.py  deps.py  main.py  settings.py
services/copilot/edis_copilot/agent/: __init__.py  limits.py  loop.py  router.py  synthesis.py
services/copilot/edis_copilot/api/: __init__.py  chat.py  conversations.py  sse.py
services/copilot/edis_copilot/budget/: __init__.py  accounting.py
services/copilot/edis_copilot/grounding/: __init__.py  citations.py  verify.py
services/copilot/edis_copilot/llm/: __init__.py  client.py  models.py  prompts.py
services/copilot/edis_copilot/persistence/: __init__.py  models.py  repository.py
services/copilot/edis_copilot/retrieval/: __init__.py  embedder.py  packer.py  search.py
services/copilot/edis_copilot/telemetry/: __init__.py  redact.py  tracing.py
services/copilot/edis_copilot/tools/: __init__.py  base.py  finding_retrieval.py  metric_lookup.py  registry.py  semantic_search.py  structured_query.py
services/copilot/tests/: conftest.py
services/copilot/tests/integration/: conftest.py  test_answer_repository.py
services/copilot/tests/unit/: conftest.py  cp_testkit.py  test_agent_loop.py  test_agent_loop_fake_llm.py  test_api_sse.py  test_budget_and_router.py  test_cache_assertion.py  test_chat_sse.py  test_grounding.py  test_grounding_verify.py  test_offline_agent.py  test_registry_and_llm.py  test_semantic_search_stub.py  test_tools.py  test_tools_tenant_injection.py
services/decision/: alembic.ini  pyproject.toml
services/decision/alembic/: env.py
services/decision/alembic/versions/: 0001_decision.py
services/decision/src/decision_engine/: __init__.py  config.py  main.py
services/decision/tests/: conftest.py  edis_l4_testkit.py
services/decision/tests/integration/: conftest.py  test_recommendation_persist.py
services/decision/tests/unit/: test_api_routes.py  test_confidence_scorer.py  test_impact_estimator.py  test_intent_classifier_fallback.py  test_lifecycle.py  test_outcome_recorder.py  test_prioritizer.py  test_synthesize_inproc.py
services/gateway/: pyproject.toml
services/gateway/src/edis_gateway/: __init__.py  config.py  deps.py  main.py  models.py  repository.py
services/gateway/tests/: conftest.py  gw_testkit.py  test_copilot_proxy.py  test_repository.py  test_rest.py  test_sse_bridge.py
services/gateway/tests/unit/: test_copilot_proxy_unit.py  test_rest_snapshots.py  test_sse_bridge_unit.py
services/governance/: README.md  alembic.ini  pyproject.toml
services/governance/app/: Dockerfile  __init__.py  deps.py  main.py  models.py  repo.py
services/governance/app/api/: __init__.py  audit.py  explain.py  lineage.py  rbac.py
services/governance/app/consumers/: __init__.py  audit_consumer.py  lineage_consumer.py
services/governance/app/migrations/: env.py
services/governance/app/seed/: __init__.py  seed.py
services/governance/tests/: conftest.py  test_audit_consumer.py  test_audit_idempotency.py  test_rbac.py
services/integration/: README.md  alembic.ini  pyproject.toml
services/integration/migrations/: __init__.py  env.py
services/integration/migrations/versions/: 0001_canonical.py  0002_integration_outbox.py
services/integration/src/edis_integration/: __init__.py  app.py  config.py
services/integration/tests/: conftest.py
services/integration/tests/integration/: conftest.py  test_canonical_upsert.py  test_outbox_atomicity.py
services/integration/tests/unit/: test_l1_l2_revenue_drop_emea.py  test_mappers.py  test_metric_derivation.py  test_process_envelope_inproc.py
services/intelligence/: alembic.ini  pyproject.toml
services/intelligence/migrations/: env.py
services/intelligence/migrations/versions/: 0001_intelligence.py
services/intelligence/tests/: conftest.py  edis_l3_testkit.py
(+245 files in other folders)
