[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edis-contracts"
version = "0.1.0"
description = "EDIS canonical data model and event-topic contracts — the single source of truth shared by every service."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "email-validator>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["edis_contracts"]

[tool.ruff]
line-length = 100
target-version = "py312"
