[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edis-governance-sdk"
version = "0.1.0"
description = "EDIS governance SDK — thin emitters every layer uses to publish audit + lineage events to the bus and to write explainability decisions to the governance service over HTTP."
requires-python = ">=3.12"
# THIRD-PARTY ONLY. edis-contracts / edis-platform are sibling local packages
# installed via `pip install -e` in dependency order (Makefile/Dockerfile/CI);
# they are not on PyPI and must never appear here.
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["edis_gov_sdk"]

[tool.ruff]
line-length = 100
target-version = "py312"
