[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edis-gateway"
version = "0.1.0"
description = "EDIS API Gateway / BFF (W1) — the single frontend edge: dev-JWT auth + per-tenant scoping, tenant-scoped REST snapshots (/v1/kpis, /v1/anomalies, /v1/recommendations, /v1/forecasts) over async repositories, Kafka->browser SSE topic bridges (one stream per concern, with heartbeat), and an SSE passthrough proxy to the L5 copilot. Authoritative authorization boundary."
requires-python = ">=3.12"
# THIRD-PARTY ONLY. Sibling local packages (edis-contracts, edis-platform,
# edis-governance-sdk) are never listed here — they are not on PyPI; the
# Makefile/Dockerfile/CI install them with `pip install -e` in dependency order.
# Import them normally in code. SSE uses FastAPI StreamingResponse (no extra dep).
dependencies = [
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "aiokafka>=0.11",
    "redis>=5.0",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "testcontainers[postgres]>=4.0",
]

[tool.hatch.build.targets.wheel]
# The gateway service package (SRC layout, import name ``edis_gateway``).
packages = ["src/edis_gateway"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that require Docker (Postgres/broker); skipped by default in unit runs.",
]
