[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edis-intelligence"
version = "0.1.0"
description = "EDIS L3 Intelligence service — classical anomaly detection (robust z-score + STL level-shift), lag-aware RCA, ETS forecasting, grounded Claude narration; Alembic migrations for findings / forecasts / evidence_bundle with a guarded pgvector embedding column."
requires-python = ">=3.12"
# THIRD-PARTY ONLY. Sibling local packages (edis-contracts, edis-platform,
# edis-governance-sdk) are never listed here — they are not on PyPI; the
# Makefile/Dockerfile/CI install them with `pip install -e` in dependency order.
# Import them normally in code.
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "statsmodels>=0.14",
    "anthropic>=0.40",
    "voyageai>=0.3",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "aiokafka>=0.11",
    "redis>=5.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "testcontainers[postgres]>=4.0",
]

[tool.hatch.build.targets.wheel]
# The L3 service package (SRC layout, import name ``edis_intelligence``) and the
# Alembic migrations are both shippable artifacts of this unit.
packages = ["src/edis_intelligence", "migrations"]

[tool.ruff]
line-length = 100
target-version = "py312"
